--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*Copied off some website - don't tell anyone*/
-
 body {
 	padding: 0;
 	margin: 0;
@@ -47,4 +45,19 @@ p {
 	margin: auto;
 	display: block;
 	text-align: center;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: 100px 10px;
+	margin: 50px;
+}
+
+.gridelement {
+	background-color: #127;
+	color: #fff;
+	border-radius: 5px;
+	padding: 20px;
+	font-size: 200%;
+
 }
