--- a/style.css
+++ b/style.css
@@ -1,36 +1,58 @@
 body {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	min-height: 100vh;
-	padding: 0;
-	margin: 0;
-	font-family: Arial, Verdana, sans-serif;
+display: flex;
+flex-direction: column;
+height: 100%;
+min-height: 100vh;
+padding: 0;
+margin: 0;
+font-family: Arial, Verdana, sans-serif;
+background-color: #5a73ad;
 }
 
-
-
 nav ul {
-	margin: 0;
-	padding: 0;
-	text-align: center;
-	background: green;
+margin: 0;
+padding: 0;
+text-align: center;
+background: #499b9b;
 }
 
 nav ul li {
-	display: inline-block;
-	list-style: none;
-	background: yellow;
+display: inline-block;
+list-style: none;
+text-decoration: none;
+border-left: 1px solid red;
+border-right: 1px solid red;
+}
+
+nav ul li a {
+text-decoration: none;
+color: #152f6b;
+}
+
+nav ul li a:hover {
+color: #5a73ad;
+}
+
+#leftside {
+float: left;
+background-color: inherit;
+}
+
+#rightside {
+float: right;
+background-color: inherit;
 }
 
 img {
-	display: block;
-  margin: auto;
+display: block;
+margin: auto;
 }
 
 h1 {
-	text-align: center;
-	font-size: 200%;
+text-align: center;
+font-size: 200%;
+color: #eee;
+text-shadow: 2px 2px 5px #111;
 }
 
 h2 {
@@ -38,7 +60,7 @@ color: #ee3e80;
 }
 
 p {
-	text-align: center;
+text-align: center;
 }
 
 #buttondiv {
@@ -59,21 +81,34 @@ border-radius: 5px;
 border-color: #ffffff;
 }
 
-
 .gridButton {
-height: 90px;
+height: 150px;
 width: 30%;
-background-color: #7C8082;
+background-color: #3cb53c;
 font-size: 100%;
 color: white;
-     font-family: 'Muli', sans-serif;
 border-radius: 5px;
+border-color: #6949d7;
 margin-top:10px;
+overflow: hidden;
+text-overflow: ellipsis;
 }
 
-    .gridButton:hover {
-background-color: #474240;
-    }
+.gridButton a {
+font-family: 'Muli', sans-serif;
+font-weight: bold;
+border: 1px solid red;
+color: #eee;
+text-decoration: none;
+text-align: left;
+font-size: 1.5em;
+text-shadow: 2px 2px 5px #111;
+white-space: nowrap;
+}
+
+.gridButton:hover {
+background-color: #60cd60;
+}
 
 #buttonGrid{
 	text-align: center;
