--- a/style.css
+++ b/style.css
@@ -9,11 +9,15 @@ font-family: Arial, Verdana, sans-serif;
 background-color: #5a73ad;
 }
 
+nav {
+height: 20px;
+background: #499b9b;
+}
+
 nav ul {
 margin: 0;
 padding: 0;
 text-align: center;
-background: #499b9b;
 }
 
 nav ul li {
