--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ padding: 20px 10px;
 margin-top: none;
 height:50px;
 width:160px;
-padding: 10px 0px;
+padding-left: 10px;
 }
 
 .front_page_title{
