--- a/style.css
+++ b/style.css
@@ -99,6 +99,13 @@ background-color: #60cd60;
 	text-align: center;
 }
 
+.btn-block{
+    padding: 15%;
+    font-size: 22px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
 .footer {
 position: absolute;
 bottom: 0;
