--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Pacifico:400,700");
+
 html{
 position: relative;
 min-height: 100%;
@@ -26,12 +28,6 @@ background: #0099ff;
 min-height: 70px;
 }
 
-#buttondiv{
-margin: auto;
-display: block;
-text-align: center;
-}
-
 .navbar-brand{
 height: 60px;
 padding: 20px 10px;
@@ -45,11 +41,17 @@ padding-left: 10px;
 }
 
 .front_page_title{
-padding-bottom: 40px;
+	font-family:"Pacifico","Arial Narrow Bold",sans-serif;
+	font-size: 4.5em;
+}
+
+.kwizzicowl-front{
+padding: 40px;
 color: black;
 }
 
-#group_pic,
+/*padding below kqizzicowl*/
+#kwizzicowl-front,
 .text-right,
 .text-left{
 padding-bottom: 30px;
