--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@ body{
 	padding-left: 10px;
 }
 
-.front_page_title{
+.page-title {
 	font-family:"Pacifico","Arial Narrow Bold",sans-serif;
 	font-size: 4.5em;
 }
@@ -57,20 +57,32 @@ body{
 	padding-bottom: 30px;
 }
 
-.btn, .footer{
+.footer{
 	font-family:"News Cycle","Arial Narrow Bold",sans-serif;
-	font-weight:700;
+	font-weight: bold;
 }
 
+.front-page-btn{
+	white-space: normal;
+	padding: 5%;
+	font-size: 1.5em;
+}
+
+/*quiz list page styling*/
 .quiz-list-button {
 	overflow: hidden;
 	background-color: orange;
 	color: white;
-	text-overflow: ellipsis;
-	margin-bottom: 5px;
+	margin-bottom: 20px;
+}
+
+.quizzes-heading{
+	padding-bottom: 30px;
 }
 
 .btn{
+	font-family:"News Cycle","Arial Narrow Bold",sans-serif;
+	font-weight: bold;
 	border-radius: 0px;
 	border-width: 2px;
 	border-color: black;
@@ -78,7 +90,7 @@ body{
 }
 
 .btn:hover {
-	color: blue;
+	color: black;
 	border-width: 2px;
 	border-color: black;
 	transition: 0.2s;
@@ -88,23 +100,30 @@ body{
 }
 
 .quizButton{
-	white-space: normal;
-	padding: 12%;
+	padding: 10%;
 	font-size: 25px;
 	margin-bottom: 20px;
 	color: black;
-	transition: 0.2s;
-	-webkit-transition: 0.2s;
-	-moz-transition: all ease 0.2s;
-	-o-transition: all ease 0.2s;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .quizButton:hover {
 	color: white;
-	transition: 0.2s;
-	-webkit-transition: 0.2s;
-	-moz-transition: all ease 0.2s;
-	-o-transition: all ease 0.2s;
+}
+
+/*keep the row a constant height even if no button displayed*/
+#quiz-row{
+	height: 60px;
+	max-height: 60px;
+}
+
+#end-message{
+	color: red;
+}
+
+#question-number, #question-score{
+	color: #575757;
 }
 
 /*styling for the create quiz form*/
@@ -147,14 +166,6 @@ input{
 	margin-bottom: 10px;
 }
 
-.score{
-	color: blue;
-}
-
-#total{
-	color: red;
-}
-
 .footer{
 	position: absolute;
 	bottom: 0;
@@ -171,6 +182,7 @@ input{
 	padding:20px 20px 0 0;
 }
 
+/*make sure footer scales properly*/
 @media screen and (max-width: 568px){
 	.footer span{
 		font-size: 2.5vw;
