--- a/public/style.css
+++ b/public/style.css
@@ -51,9 +51,7 @@ body{
 }
 
 /*padding below kqizzicowl*/
-#kwizzicowl-front,
-.text-right,
-.text-left{
+#kwizzicowl-front{
 	padding-bottom: 30px;
 }
 
@@ -66,6 +64,13 @@ body{
 	white-space: normal;
 	padding: 5%;
 	font-size: 1.5em;
+}
+
+.form-button{
+	white-space: normal;
+	padding: 3%;
+	font-size: 1.2em;
+	margin-bottom: 20px;
 }
 
 /*quiz list page styling*/
@@ -124,6 +129,11 @@ body{
 
 #question-number, #question-score{
 	color: #575757;
+}
+
+#create-quiz-title{
+	font-family:"Pacifico","Arial Narrow Bold",sans-serif;
+	font-size: 3.6em;
 }
 
 /*styling for the create quiz form*/
