--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Pacifico:400,700");
-
 html{
 	position: relative;
 	min-height: 100%;
@@ -88,7 +86,7 @@ body{
 .btn{
 	font-family:"News Cycle","Arial Narrow Bold",sans-serif;
 	font-weight: bold;
-	border-radius: 0px;
+	border-radius: 0;
 	border-width: 2px;
 	border-color: black;
 	box-shadow: 5px 5px 5px #888888;
@@ -127,7 +125,7 @@ body{
 	color: red;
 }
 
-#question-number, #question-score{
+.questionÇ{
 	color: #575757;
 }
 
@@ -210,11 +208,11 @@ input{
 }
 
 .col-sm-0{
-	width: 0px;
+	width: 0;
 	float: left;
 	overflow: hidden;
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	min-height: 1px;
 }
 
